# joinlist

./: .gitignore  ChangeLog.md  README.md  join-list.cabal  package.yaml
src/Data/: JoinList.hs
test/: Spec.hs
