name:           join-list
version:        0.1.0.0
description:    Please see the README on Github at <https://github.com/ChrisCoffey/join-list#readme>
homepage:       https://github.com/ChrisCoffey/join-list#readme
bug-reports:    https://github.com/ChrisCoffey/join-list/issues
author:         Chris Coffey
maintainer:     example@example.com
copyright:      2018 Chris Coffey
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/ChrisCoffey/join-list

library
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
  exposed-modules:
      Data.JoinList
  other-modules:
      Paths_join_list
  default-language: Haskell2010

executable join-list-exe
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , join-list
  other-modules:
      Paths_join_list
  default-language: Haskell2010

test-suite join-list-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , join-list
    , tasty
    , tasty-quickcheck
    , QuickCheck
  other-modules:
      Paths_join_list
  default-language: Haskell2010
